--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         </div>
         <div class="card">
             <h3>Other Matches</h3>
-            <div><a href="http://127.0.0.1:5500/example/previousmatch.html">Prevoius Matches</a></div><br>
-            <div><a href="http://127.0.0.1:5500/example/nextmatch.html">Next Matches </a></div><br>
-            <div><a href="http://127.0.0.1:5500/example/pointtable.html">Point Table</a></div>
+            <div><a href="previousmatch.html">Prevoius Matches</a></div><br>
+            <div><a href="nextmatch.html">Next Matches </a></div><br>
+            <div><a href="pointtable.html">Point Table</a></div>
         </div>
         <div class="card">
             <h3>About Us</h3>
